# CBoy

./: CMakeLists.txt  main.c
include/: default.h  log.h
src/System/: GB.c  GB.h
src/System/CPU/: CPU.c  CPU.h  Z80.h  instructions.c
src/System/CPU/instructions/: arithmetic.c  bit_op.c  jumps.c  load.c  misc.c  shift.c  stack.c
src/System/Display/: display.c  display.h
src/System/IO/: IO.c  IO.h  LCD.h  interrupts.c  interrupts.h  joypad.c  joypad.h
src/System/MEM/: MEM.c  MEM.h
src/System/MEM/IO/: IO.c  IO.h
src/System/PPU/: PPU.c  PPU.h  sprites.h
src/System/PPU/Display/: display.h
